turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:8: error: not found: value carreEtDemi
  carreEtDemi();
  ^Kerr36:12: error: not found: value foward
  foward(20);
  ^Kerr36:16: error: not found: value foward
  foward(20);
  ^Kerr36:18: error: not found: value foward
  foward(20);
  ^