turtleart.kerr36.Kerr36.scala.code
override def run():Unit= {
  nenuphar()
}

def nenuphar() {
  forward(20);
  left(45);
  carreEtDemi();
	left(45);
  forward(20);
  left(90);
  foward(20);
  left(45);
  forward(20);
  right(135);
  foward(20);
  left(45);
  foward(20);
  right(90)
}